// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregate factories when attempting to build an instance of type: audioItem from a DTO when the DTO is valid valid transribed audio DTO should succeed 1`] = `
AudioItem {
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
  "lengthMilliseconds": 20000,
  "mediaItemId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "name": MultiLingualText {
    "items": Array [
      MultiLingualTextItem {
        "languageId": "eng",
        "role": "original",
        "text": "The Wooden Boy",
      },
    ],
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "transcript": Transcript {
    "items": Array [
      TranscriptItem {
        "inPoint": 12000,
        "outPoint": 15550,
        "speakerInitials": "JHC",
        "text": MultiLingualText {
          "items": Array [
            MultiLingualTextItem {
              "languageId": "eng",
              "role": "original",
              "text": "There once was a little wooden boy.",
            },
          ],
        },
      },
      TranscriptItem {
        "inPoint": 18300,
        "outPoint": 19240,
        "speakerInitials": "JHC",
        "text": MultiLingualText {
          "items": Array [
            MultiLingualTextItem {
              "languageId": "eng",
              "role": "original",
              "text": "His name was Pinocchio",
            },
          ],
        },
      },
    ],
    "participants": Array [
      TranscriptParticipant {
        "initials": "JHC",
        "name": "Jimmy H. Cricket",
      },
    ],
  },
  "type": "audioItem",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: bibliographicReference from a DTO when the DTO is valid valid dto for a BibliographicReference of sub-type: Book should succeed 1`] = `
BookBibliographicReference {
  "data": BookBibliographicReferenceData {
    "abstract": "This is the abstract, NOT a general note!",
    "creators": Array [
      Object {
        "name": "Alana Duvernay",
        "type": "author",
      },
    ],
    "isbn": "978-1-895811-34-6",
    "numberOfPages": 455,
    "place": "Kennebunk Port, Maine",
    "publisher": "Atlantic Publishing",
    "title": "A Day in the Life",
    "type": "book",
    "url": "https://atlanticpublishing.com",
    "year": 1999,
  },
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "bibliographicReference",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: bibliographicReference from a DTO when the DTO is valid valid dto for a BibliographicReference of sub-type: Court Case should succeed 1`] = `
CourtCaseBibliographicReference {
  "data": CourtCaseBibliographicReferenceData {
    "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
    "caseName": "2002-07-08_Tsilhqot'inTitleCase",
    "court": "Supreme Court of British Columbia",
    "dateDecided": "Recorded 2002-07-08",
    "pages": "Pages 1-6",
    "type": "courtCase",
    "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
  },
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "bibliographicReference",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: bibliographicReference from a DTO when the DTO is valid valid dto for a BibliographicReference of sub-type: Journal Article should succeed 1`] = `
JournalArticleBibliographicReference {
  "data": JournalArticleBibliographicReferenceData {
    "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
    "creators": Array [
      BibliographicReferenceCreator {
        "name": "Sigurd Purcell",
        "type": "author",
      },
    ],
    "doi": "10.14288/bcs.v0i19.784",
    "issn": "00052949",
    "issueDate": "Spring 2013",
    "publicationTitle": "Journal of History",
    "title": "Report on the Cariboo Chilcotin Justice inquiry",
    "type": "journalArticle",
    "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
  },
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "bibliographicReference",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: book from a DTO when the DTO is valid valid book should succeed 1`] = `
Book {
  "author": "John Doeburg",
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
  "pages": Array [
    BookPage {
      "identifier": "1",
      "text": "foo",
      "translation": "dee foo",
    },
    BookPage {
      "identifier": "2",
      "text": "blah blah blah",
      "translation": "blahas",
    },
  ],
  "publicationDate": "2002",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "subtitle": "The wolf's revenge",
  "title": "Three Little Pigs",
  "type": "book",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: mediaItem from a DTO when the DTO is valid valid media item should succeed 1`] = `
MediaItem {
  "contributorAndRoles": Array [
    ContributorAndRole {
      "contributorId": "2",
      "role": "host",
    },
  ],
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 2500,
  "mimeType": "audio/mpeg",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "title": "episode title (in language)",
  "titleEnglish": "Metal Mondays episode 1",
  "type": "mediaItem",
  "url": "https://www.metalmondays.com/1.mp3",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: photograph from a DTO when the DTO is valid valid photograph should succeed 1`] = `
Photograph {
  "dimensions": PhotographDimensions {
    "heightPX": 400,
    "widthPX": 300,
  },
  "eventHistory": Array [],
  "filename": "Adiitsii-Running",
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
  "photographer": "Susie McRealart",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "photograph",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: song from a DTO when the DTO is valid valid song should succeed 1`] = `
Song {
  "audioURL": "https://www.myaudio.com/lamb.mp3",
  "contributions": Array [
    ContributorAndRole {
      "contributorId": "1",
      "role": "performer",
    },
  ],
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 3500,
  "lyrics": "Mary had a little lamb, little lamb.",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "startMilliseconds": 0,
  "title": "Song title in language",
  "titleEnglish": "Mary had a little lamb",
  "type": "song",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: spatialFeature from a DTO when the DTO is valid valid dto for a Spatial Feature of sub-type: Line should succeed 1`] = `
Line {
  "eventHistory": Array [],
  "geometry": Object {
    "coordinates": Array [
      Array [
        52.3,
        -124.2,
      ],
      Array [
        52.35,
        -124.85,
      ],
      Array [
        52.21,
        -124.9,
      ],
      Array [
        52.05,
        -125.1,
      ],
      Array [
        52.15,
        -125.1,
      ],
      Array [
        52.33,
        -125.22,
      ],
      Array [
        52.45,
        -125.39,
      ],
    ],
    "type": "LineString",
  },
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "properties": SpatialFeatureProperties {
    "description": "One amazing hike!",
    "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
    "name": "Windy Path",
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "spatialFeature",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: spatialFeature from a DTO when the DTO is valid valid dto for a Spatial Feature of sub-type: Point should succeed 1`] = `
Point {
  "eventHistory": Array [],
  "geometry": Object {
    "coordinates": Array [
      54.034404852745006,
      -132.17563335558532,
    ],
    "type": "Point",
  },
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
  "properties": SpatialFeatureProperties {
    "description": "Description for point 100",
    "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
    "name": "Name of Point with ID: 100",
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "spatialFeature",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: spatialFeature from a DTO when the DTO is valid valid dto for a Spatial Feature of sub-type: Polygon should succeed 1`] = `
Polygon {
  "eventHistory": Array [],
  "geometry": Object {
    "coordinates": Array [
      Array [
        Array [
          52.47,
          -123.6,
        ],
        Array [
          52.42,
          -123.95,
        ],
        Array [
          52.05,
          -123.95,
        ],
        Array [
          52.05,
          -123.685,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110300",
  "properties": SpatialFeatureProperties {
    "description": "Description for point 300",
    "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
    "name": "Point with ID: 300 Name",
  },
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "spatialFeature",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: term from a DTO when the DTO is valid when the dto is valid should succeed 1`] = `
Term {
  "audioFilename": undefined,
  "contributorId": "John Doe",
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "sourceProject": undefined,
  "term": "Chil-term-1",
  "termEnglish": "Engl-term-1",
  "type": "term",
}
`;

exports[`Aggregate factories when attempting to build an instance of type: vocabularyList from a DTO when the DTO is valid valid vocabulary list should succeed 1`] = `
VocabularyList {
  "entries": Array [
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
      "variableValues": Object {
        "person": "11",
        "positive": true,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
      "variableValues": Object {
        "person": "12",
        "positive": false,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
      "variableValues": Object {
        "person": "13",
        "positive": false,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "variableValues": Object {
        "person": "01",
        "positive": true,
      },
    },
    VocabularyListEntry {
      "termId": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
      "variableValues": Object {
        "person": "02",
        "positive": false,
      },
    },
  ],
  "eventHistory": Array [],
  "getCompositeIdentifier": [Function],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
  "name": "To Sing (lang)",
  "nameEnglish": "To Sing (Engl)",
  "published": true,
  "queryAccessControlList": AccessControlList {
    "allowedGroupIds": Array [],
    "allowedUserIds": Array [],
  },
  "type": "vocabularyList",
  "variables": Array [
    Object {
      "name": "positive",
      "type": "checkbox",
      "validValues": Array [
        Object {
          "display": "negative (lha)",
          "value": false,
        },
        Object {
          "display": "positive form (switch for negative)",
          "value": true,
        },
      ],
    },
    Object {
      "name": "person",
      "type": "dropbox",
      "validValues": Array [
        Object {
          "display": "I",
          "value": "1",
        },
        Object {
          "display": "You",
          "value": "2",
        },
        Object {
          "display": "She",
          "value": "3",
        },
      ],
    },
  ],
}
`;
